--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code",
+  "name": "mdiary",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "easymde": "^2.18.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
