Prepare PHP service creation

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "easymde": "^2.18.0",
+    "net": "^1.0.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13"
   },
