--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+/client/dist
 
 
 # local env files
@@ -22,4 +23,5 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-/client/caddydata
+/caddydata
+/data
