--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "core-js": "^3.8.3",
     "date-fns": "^2.22.1",
     "net": "^1.0.2",
